--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       }, [stops, land, spacingEff, population, poiMap]);
 
       // build & manage
-      function handleCellClick(x,y){ if(running) return; setStops(prev=>{ if(prev.some(p=>p.x===x&&p.y===y)) return prev; const next=[...prev,{x,y}]; setCash(c=> c-STOP_CAPEX); if(tutorialStep===0 && next.length>=1) setTutorialStep(1); if(tutorialStep===1 && next.length>=3) setTutorialStep(2); return next; }); }
+      function handleCellClick(x,y){ if(running){ banners.show({ type:'info', text:'Pause to edit route — click Pause to add stops.'}); return; } setStops(prev=>{ if(prev.some(p=>p.x===x&&p.y===y)) return prev; const next=[...prev,{x,y}]; setCash(c=> c-STOP_CAPEX); if(tutorialStep===0 && next.length>=1) setTutorialStep(1); if(tutorialStep===1 && next.length>=3) setTutorialStep(2); return next; }); }
       function buyBuses(n){ const unit=FUELS[fuel].busCost; const disc=n>=10?0.10:n>=5?0.05:0; const total=Math.round(unit*n*(1-disc)); if(running||cash<total) return; setCash(c=>c-total); setFleet(f=>f+n); setAvgBusAge(a=> (a*fleet)/(fleet+n)); }
       function expandDepot(){ if(running||cash<DEPOT_EXPANSION_COST) return; setCash(c=>c-DEPOT_EXPANSION_COST); setDepotCapacity(cap=>cap+DEPOT_EXPANSION_STEP); }
       function hireDrivers(n){ if(running) return; setDrivers(d=> Math.max(0,d+n)); }
@@ -459,7 +459,7 @@
                   </div>
                 ))}
               </div>
-              <svg className="absolute inset-0" width={CANVAS_SIZE} height={CANVAS_SIZE}>
+              <svg className=\"absolute inset-0\" width={CANVAS_SIZE} height={CANVAS_SIZE} style={{ pointerEvents: 'none' }}>
                 {stops.length>=2 && <polyline points={stops.map(p=> `${p.x*CELL_SIZE + CELL_SIZE/2},${p.y*CELL_SIZE + CELL_SIZE/2}`).join(' ')} fill="none" stroke="#0ea5e9" strokeWidth={4} strokeLinejoin="round" strokeLinecap="round" />}
               </svg>
               {stops.map((p,i)=> (
