--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-50">
-  <div id="root"></div>
+  <div class="mx-auto max-w-screen-2xl px-6 md:px-10 lg:px-14">
+    <div id="root"></div>
+  </div>
 
   <!-- Error overlay so a crash isn't just a white screen -->
   <div id="error-overlay" class="hidden fixed inset-0 bg-white/95 text-rose-700 p-6">
