--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-b from-sky-50 via-emerald-50/40 to-white">
+<body class="min-h-screen bg-gradient-to-b from-sky-50 via-emerald-50/40 to-white">
   <div id="root"></div>
 
   <!-- Error overlay so a crash isn't just a white screen -->
