Add offline Tailwind build artifacts

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Transit Simulator</title>
+  <link rel="stylesheet" href="./css/tailwind.generated.css" />
   <link rel="stylesheet" href="./css/styles.css" />
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="min-h-screen bg-gradient-to-b from-sky-50 via-emerald-50/40 to-white">
   <div id="root"></div>
