--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
     .odLine { position:absolute; pointer-events:none; }
     .odLine svg { overflow:visible; }
     .badge { display:inline-block; padding:2px 8px; border-radius:9999px; background:#fee2e2; color:#991b1b; font-size:12px; font-weight:600; }
+    .routeItem { background:rgba(255,255,255,0.9); border:1px solid #d7ece3; border-radius:10px; padding:10px; margin-top:8px; cursor:pointer; transition:box-shadow 0.2s, border-color 0.2s; }
+    .routeItem.active { border-color:#34d399; box-shadow:0 0 0 2px rgba(52,211,153,0.25); }
+    .routeItem .routeTitle { display:flex; align-items:center; justify-content:space-between; font-weight:600; color:#0f172a; }
+    .routeItem input[type="color"] { border:none; background:transparent; width:36px; height:24px; cursor:pointer; }
+    .routeItem input[type="text"] { flex:1; min-width:120px; border:1px solid #d1e7dc; border-radius:6px; padding:4px 6px; font-size:13px; font-weight:600; color:#0f172a; background:#f9fffc; }
+    .routeItem .routeMeta { display:flex; align-items:center; gap:10px; margin-top:8px; font-size:13px; color:#475569; flex-wrap:wrap; }
+    .routeItem label { display:flex; align-items:center; gap:4px; font-size:12px; color:#475569; }
+    .stopMarker { position:absolute; width:16px; height:16px; border-radius:50%; background:#059669; transform:translate(-50%,-50%); border:2px solid #ecfdf5; box-shadow:0 0 0 2px rgba(13,148,136,0.15); pointer-events:none; }
   </style>
 </head>
 <body>
@@ -92,12 +100,21 @@
         <div class="center-card">
           <div class="center-head"><strong>Transit Simulator</strong><div class="muted">Tutorial City · Population 100,000 · Goal: 5% for 30 days</div></div>
           <div class="map-wrap"><div id="mapSquare"><div class="gridLines"></div></div></div>
-          <div class="center-foot muted">Click to add stops (coming soon) · Shift-click to remove · Pause to edit.</div>
+          <div class="center-foot muted">Select a route to begin placing stops. Shift-click tiles to remove stops from the active route.</div>
         </div>
       </section>
 
       <aside class="col col-scroll card" id="rightCol">
-        <div class="section"><strong>Routes</strong><div class="muted">Route controls coming soon.</div></div>
+        <div class="section" id="routesPanel">
+          <div class="hstack" style="justify-content:space-between;">
+            <strong>Routes</strong>
+            <button class="btn" id="addRoute">＋ Route</button>
+          </div>
+          <div id="routeList" class="muted" style="margin-top:8px;">No routes yet. Add one to begin planning.</div>
+          <div id="routeDetails" class="muted" style="margin-top:12px;">
+            Select a route to edit its color, vehicles, and stops.
+          </div>
+        </div>
         <div class="section"><strong>Fare &amp; Policy</strong><div class="hstack"><button class="btn" id="fareMinus">–</button><div id="fare">$2.00</div><button class="btn" id="farePlus">+</button></div><div class="muted">Range: $1.50 – $3.00</div></div>
         <div class="section"><strong>Service Hours</strong><div class="muted">Start 06:00 · End 22:00</div></div>
         <div class="section">
@@ -132,6 +149,7 @@
   };
   const DIST_DECAY=0.06;  // higher → fewer long trips
   const TRIPS_PER_HOME=8; // target avg daily trips per home (both ways counted as 2)
+  const MAX_VEHICLES=10;  // garage capacity
 
   // --- MAP SIZING (square fits viewport)
   function sizeMap(){
@@ -141,12 +159,17 @@
     map.style.width=size+"px"; map.style.height=size+"px";
     map.querySelector(".gridLines").style.backgroundSize=cell+"px "+cell+"px";
     map.dataset.cell=cell;
+    repositionStops();
   }
 
   // --- STATE
   let homes=[], pois=[];
   let od=[]; // list of {ox,oy,dx,dy,tripsPerDay,type,dist}
   let inspectorOn=false, heatOn=false;
+  let stops=new Map(); // key "x,y" -> {id,x,y,el,usage}
+  let routes=[]; // list of {id,name,color,vehicles,stops:[],ridership}
+  let editingRouteId=null;
+  let routeSeq=1;
 
   // --- helpers
   function addTile(emoji,gx,gy,scale=1){
@@ -163,6 +186,267 @@
     return d;
   }
   function dist(a,b){ const dx=a.x-b.x, dy=a.y-b.y; return Math.hypot(dx,dy); }
+
+  function stopKey(gx,gy){ return `${gx},${gy}`; }
+
+  function escapeHTML(str){
+    return (str??'').replace(/[&<>"']/g, c=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"}[c]||c));
+  }
+
+  function ensureStop(gx,gy){
+    const key=stopKey(gx,gy);
+    if(stops.has(key)) return stops.get(key);
+    const cell=parseInt($("#mapSquare").dataset.cell||"24",10);
+    const marker=document.createElement("div");
+    marker.className="stopMarker";
+    marker.style.left=(gx*cell+cell/2)+"px";
+    marker.style.top =(gy*cell+cell/2)+"px";
+    $("#mapSquare").appendChild(marker);
+    const stop={id:`s${key}`,x:gx,y:gy,el:marker,usage:0};
+    stops.set(key,stop);
+    return stop;
+  }
+
+  function removeStopMarkerIfUnused(stop){
+    if(stop.usage<=0){
+      if(stop.el && stop.el.parentNode) stop.el.parentNode.removeChild(stop.el);
+      stops.delete(stopKey(stop.x,stop.y));
+    }
+  }
+
+  function resetAllStops(){
+    stops.forEach(s=>{ if(s.el && s.el.parentNode) s.el.parentNode.removeChild(s.el); });
+    stops.clear();
+  }
+
+  function repositionStops(){
+    const cell=parseInt($("#mapSquare").dataset.cell||"24",10);
+    stops.forEach(stop=>{
+      stop.el.style.left=(stop.x*cell+cell/2)+"px";
+      stop.el.style.top =(stop.y*cell+cell/2)+"px";
+    });
+  }
+
+  function resetRoutes(){
+    routes.length=0;
+    editingRouteId=null;
+    routeSeq=1;
+    resetAllStops();
+    renderRoutesPanel();
+    updateRouteStats();
+    updateRouteDetails();
+    updateEditingStatus();
+  }
+
+  function makeRoute(){
+    const id=`r${routeSeq++}`;
+    const colors=['#1d4ed8','#dc2626','#047857','#9333ea','#f59e0b','#0891b2'];
+    const color=colors[(routes.length)%colors.length];
+    const route={id,name:`Route ${routes.length+1}`,color,vehicles:1,stops:[],ridership:0};
+    routes.push(route);
+    selectRoute(id);
+    renderRoutesPanel();
+    updateRouteStats();
+    return route;
+  }
+
+  function selectRoute(id){
+    editingRouteId=id;
+    if(inspectorLayer) inspectorLayer.innerHTML="";
+    renderRoutesPanel();
+    updateRouteDetails();
+    updateEditingStatus();
+  }
+
+  function routeStopCount(route){
+    return route ? route.stops.length : 0;
+  }
+
+  function updateRouteMetrics(route){
+    const uniqueStops=new Set(route.stops).size;
+    route.ridership=Math.round(uniqueStops * 14 * Math.max(0, route.vehicles));
+  }
+
+  function updateRouteStats(){
+    let vehiclesUsed=0, ridershipHr=0;
+    for(const route of routes){
+      updateRouteMetrics(route);
+      vehiclesUsed+=route.vehicles;
+      ridershipHr+=route.ridership;
+    }
+    const spare=Math.max(0, MAX_VEHICLES-vehiclesUsed);
+    const vehLabel=$("#veh");
+    if(vehLabel){ vehLabel.textContent=`${vehiclesUsed} / ${MAX_VEHICLES} (Spare: ${spare})`; }
+    const rph=$("#rph");
+    if(rph){ rph.textContent=ridershipHr.toLocaleString(); }
+  }
+
+  function updateRouteDetails(){
+    const details=$("#routeDetails");
+    if(!details) return;
+    const route=routes.find(r=>r.id===editingRouteId);
+    if(!route){
+      details.innerHTML='Select a route to edit its color, vehicles, and stops.';
+      return;
+    }
+    const uniqueStops=new Set(route.stops).size;
+    const safeName=escapeHTML(route.name||'');
+    details.innerHTML=`<div><strong>${safeName}</strong></div>
+      <div>Stops placed: ${route.stops.length} (${uniqueStops} unique)</div>
+      <div>Vehicles assigned: ${route.vehicles}</div>
+      <div>Estimated riders / hr: ${route.ridership.toLocaleString()}</div>
+      <div style="margin-top:6px;">Click the map to add stops. Shift-click to remove the stop for this tile.</div>`;
+  }
+
+  function updateEditingStatus(){
+    const foot=$(".center-foot");
+    if(!foot) return;
+    const route=routes.find(r=>r.id===editingRouteId);
+    if(route){
+      foot.textContent=`Editing ${route.name}: click the map to add stops · Shift-click to remove.`;
+    }else if(inspectorOn){
+      foot.textContent='Demand inspector active: click a home to view its top destinations.';
+    }else{
+      foot.textContent='Select a route to begin placing stops. Shift-click tiles to remove stops from the active route.';
+    }
+  }
+
+  function renderRoutesPanel(){
+    const list=$("#routeList");
+    if(!list) return;
+    list.innerHTML="";
+    if(!routes.length){
+      list.textContent='No routes yet. Add one to begin planning.';
+      list.classList.add('muted');
+      return;
+    }
+    list.classList.remove('muted');
+    for(const route of routes){
+      const item=document.createElement("div");
+      item.className="routeItem"+(route.id===editingRouteId?" active":"");
+      item.dataset.route=route.id;
+      item.style.borderLeft=`6px solid ${route.color}`;
+      item.style.paddingLeft="12px";
+
+      const title=document.createElement("div");
+      title.className="routeTitle";
+
+      const nameInput=document.createElement("input");
+      nameInput.type="text";
+      nameInput.value=route.name;
+      nameInput.addEventListener("click",e=>e.stopPropagation());
+      nameInput.addEventListener("input",e=>{ route.name=e.target.value; updateRouteDetails(); updateEditingStatus(); });
+      nameInput.addEventListener("blur",()=>{
+        if(!route.name || !route.name.trim()){
+          const fallbackIndex=routes.indexOf(route)+1;
+          route.name=`Route ${fallbackIndex}`;
+          nameInput.value=route.name;
+          updateRouteDetails();
+          updateEditingStatus();
+        }
+      });
+
+      const colorInput=document.createElement("input");
+      colorInput.type="color";
+      colorInput.value=route.color;
+      colorInput.addEventListener("click",e=>e.stopPropagation());
+      colorInput.addEventListener("input",e=>{ route.color=e.target.value; updateRouteDetails(); renderRoutesPanel(); });
+
+      title.appendChild(nameInput);
+      title.appendChild(colorInput);
+      item.appendChild(title);
+
+      const meta=document.createElement("div");
+      meta.className="routeMeta";
+
+      const stopsSpan=document.createElement("span");
+      stopsSpan.textContent=`Stops: ${routeStopCount(route)}`;
+
+      const ridersSpan=document.createElement("span");
+      ridersSpan.textContent=`Riders/hr: ${route.ridership.toLocaleString()}`;
+
+      const vehiclesLabel=document.createElement("label");
+      vehiclesLabel.textContent="Vehicles";
+      const vehiclesInput=document.createElement("input");
+      vehiclesInput.type="number";
+      vehiclesInput.min="0";
+      vehiclesInput.max=String(MAX_VEHICLES);
+      vehiclesInput.value=route.vehicles;
+      vehiclesInput.style.width="56px";
+      vehiclesInput.addEventListener("click",e=>e.stopPropagation());
+      vehiclesInput.addEventListener("change",e=>{
+        const v=Math.max(0, Math.min(MAX_VEHICLES, parseInt(e.target.value||"0",10)));
+        route.vehicles=v;
+        vehiclesInput.value=v;
+        updateRouteStats();
+        updateRouteDetails();
+        renderRoutesPanel();
+      });
+      vehiclesLabel.appendChild(vehiclesInput);
+
+      meta.appendChild(stopsSpan);
+      meta.appendChild(ridersSpan);
+      meta.appendChild(vehiclesLabel);
+      item.appendChild(meta);
+
+      item.addEventListener("click",()=>{ selectRoute(route.id); });
+
+      list.appendChild(item);
+    }
+  }
+
+  function addStopToRoute(route,gx,gy){
+    const stop=ensureStop(gx,gy);
+    route.stops.push(stop.id);
+    stop.usage=(stop.usage||0)+1;
+    updateRouteMetrics(route);
+    updateRouteStats();
+    updateRouteDetails();
+    renderRoutesPanel();
+  }
+
+  function removeStopFromRoute(route,gx,gy){
+    const key=stopKey(gx,gy);
+    const stop=stops.get(key);
+    if(!stop) return;
+    const idx=route.stops.lastIndexOf(stop.id);
+    if(idx>-1){
+      route.stops.splice(idx,1);
+      stop.usage=Math.max(0,(stop.usage||0)-1);
+      removeStopMarkerIfUnused(stop);
+      updateRouteMetrics(route);
+      updateRouteStats();
+      updateRouteDetails();
+      renderRoutesPanel();
+    }
+  }
+
+  function handleStopEdit(e){
+    const route=routes.find(r=>r.id===editingRouteId);
+    if(!route) return;
+    const map=$("#mapSquare");
+    const rect=map.getBoundingClientRect();
+    const cell=parseInt(map.dataset.cell||"24",10);
+    const mx=e.clientX-rect.left;
+    const my=e.clientY-rect.top;
+    const gx=Math.max(0, Math.min(GRID-1, Math.floor(mx/cell)));
+    const gy=Math.max(0, Math.min(GRID-1, Math.floor(my/cell)));
+    if(e.shiftKey){
+      removeStopFromRoute(route,gx,gy);
+    }else{
+      addStopToRoute(route,gx,gy);
+    }
+  }
+
+  function mapClickRouter(e){
+    if(editingRouteId){
+      handleStopEdit(e);
+      return;
+    }
+    if(inspectorOn){
+      handleInspectorClick(e);
+    }
+  }
 
   // --- city generation: homes + destinations
   function generateCity(){
@@ -253,14 +537,13 @@
       inspectorLayer.className="odLine";
       map.appendChild(inspectorLayer);
     }
-    map.addEventListener("click", onMapClick);
+    updateEditingStatus();
   }
   function disableInspectorHandlers(){
-    const map=$("#mapSquare");
-    map.removeEventListener("click", onMapClick);
     if(inspectorLayer) inspectorLayer.innerHTML="";
+    updateEditingStatus();
   }
-  function onMapClick(e){
+  function handleInspectorClick(e){
     // only react if clicked near a home
     const cell=parseInt($("#mapSquare").dataset.cell||"24",10);
     const rect=$("#mapSquare").getBoundingClientRect();
@@ -281,6 +564,7 @@
     drawODLines(list);
   }
   function drawODLines(list){
+    if(!inspectorLayer) return;
     inspectorLayer.innerHTML="";
     const cell=parseInt($("#mapSquare").dataset.cell||"24",10);
     for(const t of list){
@@ -303,6 +587,7 @@
   // --- init & resize
   function rebuildAll(){
     sizeMap();
+    resetRoutes();
     generateCity();
     buildOD();
     renderHeat();
@@ -314,6 +599,12 @@
     $("#fareMinus").onclick=()=>{let c=parseFloat($("#fare").textContent.slice(1)); c=Math.max(1.5,c-0.05); $("#fare").textContent=`$${c.toFixed(2)}`;};
     $("#farePlus").onclick=()=>{let c=parseFloat($("#fare").textContent.slice(1)); c=Math.min(3,c+0.05); $("#fare").textContent=`$${c.toFixed(2)}`;};
     window.addEventListener("resize",()=>{ sizeMap(); renderHeat(); /* positions persist */ });
+
+    $("#mapSquare").addEventListener("click", mapClickRouter);
+    $("#addRoute").addEventListener("click", ()=>{
+      makeRoute();
+      updateEditingStatus();
+    });
 
     // Demand toggles
     $("#toggleDemandHeat").addEventListener("change",(e)=>{ heatOn=e.target.checked; renderHeat(); });
